# TLTConvectorTraining

./: .dockerignore  .gitignore  LICENSE  Pipfile  README.md  TODO.txt  debug.env  dockerfile  dump.sql  dumpdata.json  empty.env  pyproject.toml
_project_/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
business/: __init__.py  admin.py  apps.py  urls.py
business/migrations/: 0001_initial.py  0002_alter_article_image_alter_category_image_and_more.py  0002_alter_category_name.py  0002_article_last_modified_time_and_more.py  0002_category.py  0003_alter_article_html_description_and_more.py  0003_productcharacteristictype_service_and_more.py  0003_service_html_description_service_html_title_override_and_more.py  0004_product_html_description_product_html_title_override_and_more.py  0004_rename_h1_override_article_h1_and_more.py  0005_alter_article_h1_alter_article_html_title_and_more.py  0005_article_html_description_article_html_title_override_and_more.py  0006_alter_article_slug_alter_category_slug_and_more.py  0006_article_add_sitename_to_html_title_and_more.py  0007_alter_category_parent.py  0007_article_h1_override_category_h1_override_and_more.py  0008_remove_article_title.py  0010_alter_category_summary.py  (+13 more)
core/: admin.py  apps.py  config.py  constants.py  context_data.py  context_processors.py  sitemaps.py  tests.py  urls.py
feedback_requests/: admin.py  apps.py  config.py  forms.py  models.py  signals.py
requests/: admin.py  apps.py  models.py
shared/: constant_class.py  reflection.py  string_processing.py
templates/: base.html
(+145 files in other folders)
